# F411_P1

./: .mxproject  CMakeLists.txt  README.md  checklist.md  f411_p1.ioc  log.txt  project_map.md  telemetry.md
Core/Inc/: app_main.h  attitude.h  attitude_filter.h  audio_control.h  audio_power.h  audio_tone.h  audio_volume_smoother.h  bsp_uart_log.h  button_event.h  data_logger.h  fault_manager.h  head_detect.h  head_state_machine.h  i2c.h  i2s.h  imu_mpu6500.h  ina219_power.h  main.h  power_policy.h  power_report.h  sim_telemetry.h  spi.h  status_led.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  system_mode.h
Core/Src/: app_main.c  attitude.c  attitude_filter.c  audio_control.c  audio_power.c  audio_tone.c  audio_volume_smoother.c  bsp_uart_log.c  button_event.c  data_logger.c  dma.c  fault_manager.c  gpio.c  head_detect.c  head_state_machine.c  i2c.c  i2s.c  imu_mpu6500.c  ina219_power.c  main.c  power_policy.c  power_report.c  sim_telemetry.c  spi.c  status_led.c  stm32f4xx_it.c  system_mode.c
cmake/stm32cubemx/: CMakeLists.txt
log/: LOG.CSV
